k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zazzle-agent
  labels:
    name: zazzle-agent
